--- a/pythonmodels/templates/pythonmodels/master.html
+++ b/pythonmodels/templates/pythonmodels/master.html
@@ -8,16 +8,23 @@
     <title>Python Models</title>
 
     {# Bootstrap css #}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'pythonmodels/css/bootstrap.min.css' %}">
 
     {# Stylesheet links #}
-    <link rel="stylesheet" type="text/css" href="{% static 'pythonmodels/css/style.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'pythonmodels/css/style.css' %}"/>
 
 </head>
 <body>
 
 {% block content %}
 {% endblock %}
+
+
+{# Jquery js #}
+<script src="{% static 'pythonmodels/js/jquery-3.2.1.min.js' %}"></script>
+
+{# Bootstrap js #}
+<script src="{% static 'pythonmodels/js/bootstrap.min.js' %}"></script>
 
 </body>
 </html>
