--- a/pythonmodels/templates/pythonmodels/post_list.html
+++ b/pythonmodels/templates/pythonmodels/post_list.html
@@ -2,22 +2,16 @@
 
 {% block content %}
 
-    {% for post in posts %}
-        {{ post }}
-    {% endfor %}
-
     <div>
         <h1><a href="/">Test Blog</a></h1>
     </div>
 
-    {% for post in posts %}
+    {% for post in latest_post_list %}
         <div>
             <p>published: {{ post.published_date }}</p>
-            <h1><a href="">{{ post.title }}</a></h1>
+            <h1><a href="{% url 'pythonmodels:post_detail' post.id %}">{{ post.title }}</a></h1>
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
-
-
 
 {% endblock %}
