Updated views and header

--- a/pythonmodels/templates/pythonmodels/index.html
+++ b/pythonmodels/templates/pythonmodels/index.html
@@ -1,4 +1,4 @@
-{% extends 'pythonmodels/master.html' %}
+{% extends 'pythonmodels/layout/master.html' %}
 
 {% block content %}
     <div class="col-md-6">
