--- a/pythonmodels/templates/pythonmodels/layout/master.html
+++ b/pythonmodels/templates/pythonmodels/layout/master.html
@@ -5,13 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta content="{% csrf_token %}">
-    <title>Python Models</title>
+    <title>{% block title %}Python Models{% endblock %}</title>
 
     {# Bootstrap css #}
     <link rel="stylesheet" href="{% static 'pythonmodels/css/bootstrap.min.css' %}">
 
     {# Stylesheet links #}
-    <link rel="stylesheet" type="text/css" href="{% static 'pythonmodels/css/master.css' %}"/>
+    {% block css %}{% endblock %}
+    <link rel="stylesheet" href="{% static 'pythonmodels/css/master.css' %}"/>
 
 </head>
 <body>
@@ -31,6 +32,7 @@
 <script src="{% static 'pythonmodels/js/bootstrap.min.js' %}"></script>
 
 {# Other js #}
+{% block js %}{% endblock %}
 <script src="{% static 'pythonmodels/js/landing.js' %}"></script>
 
 </body>
