--- a/pythonmodels/templates/pythonmodels/registration/login.html
+++ b/pythonmodels/templates/pythonmodels/registration/login.html
@@ -1,48 +1,18 @@
 {% extends 'pythonmodels/layout/master.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block title %}Login{% endblock %}
 
 {% block content %}
 
     <div class="landing">
 
-        <form id='login' class="col-sm-4" method="POST" action="{% url 'pythonmodels:login' %}">
-
+        <div class="col-md-4">
             <h1>Login</h1>
-
-            Don't have an account? <a href='{% url 'pythonmodels:register' %}'>Register here...</a>
-
-            {% csrf_token %}
-
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input id="username" type="text" class="form-control" name="username" value="{# old username #}"
-                       required
-                       autofocus>
-                {% if error_message %}
-                    <div class="error">{{ error_message }}</div>
-                {% endif %}
-            </div>
-
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input id="password" class="form-control" type="password" name="password" required>
-                {% if error_message %}
-                    <div class="error">{{ error_message }}</div>
-                {% endif %}
-            </div>
-
-            {% if messages %}
-                {% for message in messages %}
-                    <div class="alert alert-danger">{{ message }}</div>
-                {% endfor %}
-            {% endif %}
-
-            <button type="submit" class="btn btn-primary">Login</button>
-
-            <a class="btn btn-link" href="/password/reset">Forgot Your Password?</a>
-
-        </form>
+            <p>Don't have an account? <a href={% url 'pythonmodels:register' %}>Register here...</a></p>
+            {% crispy form %}
+        </div>
 
     </div>
 {% endblock %}
