--- a/pythonmodels/templates/pythonmodels/registration/register.html
+++ b/pythonmodels/templates/pythonmodels/registration/register.html
@@ -1,19 +1,15 @@
 {% extends 'pythonmodels/layout/master.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
 
     <div class="landing">
 
         <div class="col-md-4">
-
-
-            <form action='' method="POST">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <input type="submit" value="Sign Up">
-            </form>
-
-
+            <h1>Register</h1>
+            <p>Already registered? <a href={% url 'pythonmodels:login' %}>Login here...</a></p>
+            {% crispy form %}
         </div>
 
     </div>
