--- a/pythonmodels/templates/pythonmodels/layout/user_layout.html
+++ b/pythonmodels/templates/pythonmodels/layout/user_layout.html
@@ -23,7 +23,7 @@
     <script src="https://code.highcharts.com/modules/histogram-bellcurve.js"></script>
     <script src="//rawgithub.com/phpepe/highcharts-regression/master/highcharts-regression.js"></script>
     <script src="https://code.highcharts.com/modules/heatmap.js"></script>
-    <script src="/js/highchart.js"></script>
+    <script src="{% static 'pythonmodels/js/highchart.js' %}"></script>
 
     {# Datatable js #}
     <script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
