--- a/pythonmodels/templates/pythonmodels/user_content/userIndex.html
+++ b/pythonmodels/templates/pythonmodels/user_content/userIndex.html
@@ -1,5 +1,7 @@
 {% extends 'pythonmodels/layout/user_layout.html' %}
 
+{% block title %}PyModels - {{ user.username }}{% endblock %}
+
 {% block userBody %}
 
     <div id="welcome">
