--- a/pythonmodels/templates/pythonmodels/registration/register.html
+++ b/pythonmodels/templates/pythonmodels/registration/register.html
@@ -2,6 +2,8 @@
 
 {% load crispy_forms_tags %}
 
+{% block title %}PyModel - Register{% endblock %}
+
 {% block content %}
 
     <div class="landing">
