--- a/pythonmodels/templates/pythonmodels/layout/master.html
+++ b/pythonmodels/templates/pythonmodels/layout/master.html
@@ -4,6 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="csrf-token" content="{% csrf_token %}">">
     <title>{% block title %}Python Models{% endblock %}</title>
 
     {# Bootstrap css #}
