Added seeder migration and finished data upload

--- a/pythonmodels/templates/pythonmodels/layout/header.html
+++ b/pythonmodels/templates/pythonmodels/layout/header.html
@@ -20,7 +20,7 @@
 
                     <li><a href="{% url 'pythonmodels:login' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a>
                     </li>
-                    <li><a href="/guest">Guest</a></li>
+                    <li><a href="{% url 'pythonmodels:guest' %}">Guest</a></li>
 
                 {% else %}
 
