--- a/pythonmodels/templates/pythonmodels/user_content/modelCreate.html
+++ b/pythonmodels/templates/pythonmodels/user_content/modelCreate.html
@@ -79,7 +79,7 @@
                 </div>
             </div>
 
-            <button id="rGet" type="submit" class="btn btn-default">Submit</button>
+            <button id="pyGet" type="submit" class="btn btn-default">Submit</button>
 
         </form>
 
