Added linear regression output to create model

--- a/pythonmodels/templates/pythonmodels/layout/master.html
+++ b/pythonmodels/templates/pythonmodels/layout/master.html
@@ -30,6 +30,9 @@
 {# Bootstrap js #}
 <script src="{% static 'pythonmodels/js/bootstrap.min.js' %}"></script>
 
+<!-- Font Awesome js -->
+<script src="https://use.fontawesome.com/0d889daa53.js"></script>
+
 {# Other js #}
 {% block js %}{% endblock %}
 <script src="{% static 'pythonmodels/js/landing.js' %}"></script>
