--- a/pythonmodels/templates/pythonmodels/user_content/modelCreate.html
+++ b/pythonmodels/templates/pythonmodels/user_content/modelCreate.html
@@ -86,7 +86,9 @@
                 </div>
             </div>
 
-            <button id="pyGet" type="submit" class="btn btn-default">Submit</button>
+            <button id="pyGet" type="submit" class="btn btn-default">
+                Create Model <i id="fa-spinner"></i>
+            </button>
 
         </form>
 
@@ -109,7 +111,7 @@
         </div>
         <div class="row">
             <div id="residVsFitted" class="col-md-6"></div>
-            <div id="corMatrix" class="col-md-6"></div>
+            <div id="corrMatrix" class="col-md-6"></div>
         </div>
     </div>
 
