--- a/pythonmodels/templates/pythonmodels/user_content/modelCreate.html
+++ b/pythonmodels/templates/pythonmodels/user_content/modelCreate.html
@@ -61,8 +61,12 @@
             <div class="form-group">
                 <label for="modelType">What type of model?</label>
                 <select id="modelType" class="form-control" name="modelType">
-                    <option>Classification</option>
-                    <option>Regression</option>
+                    <optgroup label="Regression">
+                        <option value="Simple Linear Regression">Simple Linear</option>
+                    </optgroup>
+                    <optgroup label="Classification">
+                        <option>Logistic</option>
+                    </optgroup>
                 </select>
             </div>
 
