Added error messages to create model

--- a/pythonmodels/static/pythonmodels/css/user.css
+++ b/pythonmodels/static/pythonmodels/css/user.css
@@ -50,6 +50,9 @@
     background: rgba(0, 66, 201, 0.3);
 }
 
+.formErrorHighlight {
+    box-shadow: 0px 0px 10px 10px #ac2925;
+}
 #createModelErrors {
     margin-top: 10px;
 }
