--- a/pythonmodels/templates/pythonmodels/user_content/modelCreate.html
+++ b/pythonmodels/templates/pythonmodels/user_content/modelCreate.html
@@ -96,27 +96,28 @@
 
         </form>
 
-    </div>
+        <hr id="outputDivider" hidden>
 
-
-    {# Python model charts #}
-    <div id="modelOutput">
-        <div class="row">
-            <div id="outputHeader" class="text-center">
-                <h3></h3>
+        {# Python model charts #}
+        <div id="modelOutput">
+            <div class="row">
+                <div id="outputHeader" class="text-center">
+                    <h3></h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <table id="modelCoefs" class="hover stripe row-border compact" cellspacing="0">
+                        {# Python model coefficients #}
+                    </table>
+                </div>
+            </div>
+            <div class="row">
+                <div id="residVsFitted" class="col-md-6"></div>
+                <div id="corrMatrix" class="col-md-6"></div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <table id="modelCoefs" class="hover stripe row-border compact" cellspacing="0">
-                    {# Python model coefficients #}
-                </table>
-            </div>
-        </div>
-        <div class="row">
-            <div id="residVsFitted" class="col-md-6"></div>
-            <div id="corrMatrix" class="col-md-6"></div>
-        </div>
+
     </div>
 
 {% endblock %}
