Added multinomial logistic regression to create model

--- a/pythonmodels/templates/pythonmodels/layout/userLayout.html
+++ b/pythonmodels/templates/pythonmodels/layout/userLayout.html
@@ -20,13 +20,15 @@
 
     {# Highcharts js #}
     <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/modules/histogram-bellcurve.js"></script>
     <script src="//rawgithub.com/phpepe/highcharts-regression/master/highcharts-regression.js"></script>
     <script src="https://code.highcharts.com/modules/heatmap.js"></script>
     <script src="{% static 'pythonmodels/js/highchart.js' %}"></script>
 
     {# Datatable js #}
     <script src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+
+    {# MathJax js #}
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 
     {# Other user js #}
     <script src="{% static 'pythonmodels/js/user.js' %}"></script>
