--- a/pythonmodels/templates/pythonmodels/user_content/dataUpload.html
+++ b/pythonmodels/templates/pythonmodels/user_content/dataUpload.html
@@ -34,6 +34,7 @@
         <ul>
             <li>CSV and Excel only</li>
             <li>Requires headers</li>
+            <li>Remove index row before uploading</li>
             <li>Click "Remove file" to upload another dataset</li>
         </ul>
 
