Added cars dataset, removed diamonds, removed about and contact pages

--- a/pythonmodels/templates/pythonmodels/layout/userLayout.html
+++ b/pythonmodels/templates/pythonmodels/layout/userLayout.html
@@ -56,12 +56,7 @@
                 </div>
             </div>
             <div class="col-sm-2 sidenav text-center">
-                <div class="well">
-                    <p>ADS</p>
-                </div>
-                <div class="well">
-                    <p>ADS</p>
-                </div>
+                {# Add sidenav content #}
             </div>
         </div>
     </div>
