--- a/pythonmodels/templates/pythonmodels/landing_content/landing.html
+++ b/pythonmodels/templates/pythonmodels/landing_content/landing.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="landing">
-        <p>These are the contents of Landing</p>
+        <p>Supercharged Data Modeling and Visualization</p>
     </div>
 
 {% endblock %}
