--- a/pythonmodels/templates/pythonmodels/layout/master.html
+++ b/pythonmodels/templates/pythonmodels/layout/master.html
@@ -9,6 +9,9 @@
     {# Bootstrap css #}
     <link rel="stylesheet" href="{% static 'pythonmodels/css/bootstrap.min.css' %}">
 
+    {# Font Awesome css #}
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+
     {# Stylesheet links #}
     {% block css %}{% endblock %}
     <link rel="stylesheet" href="{% static 'pythonmodels/css/master.css' %}"/>
@@ -29,9 +32,6 @@
 
 {# Bootstrap js #}
 <script src="{% static 'pythonmodels/js/bootstrap.min.js' %}"></script>
-
-<!-- Font Awesome js -->
-<script src="https://use.fontawesome.com/0d889daa53.js"></script>
 
 {# Other js #}
 {% block js %}{% endblock %}
