--- a/pythonmodels/templates/pythonmodels/user_content/userIndex.html
+++ b/pythonmodels/templates/pythonmodels/user_content/userIndex.html
@@ -23,7 +23,7 @@
 
             <div class="col-sm-6">
                 <div class="container-fluid">
-                    <h2 id="userDataH2" value="{{ user.username }}">Your Datasets</h2>
+                    <h2 id="userDataH2">Your Datasets</h2>
 
                     {% if datasets %}
                         {% for data in datasets %}
