--- a/pythonmodels/static/pythonmodels/css/master.css
+++ b/pythonmodels/static/pythonmodels/css/master.css
@@ -15,6 +15,7 @@ body {
     border-radius: 0;
 }
 
+
 /* Set black background color, white text and some padding */
 footer {
     background-color: #000000;
@@ -23,6 +24,7 @@ footer {
     bottom: 0;
     left: 0;
     width: 100%;
+    min-height: 50px;
 }
 
 #loginFlash {
