--- a/pythonmodels/templates/pythonmodels/layout/footer.html
+++ b/pythonmodels/templates/pythonmodels/layout/footer.html
@@ -1,3 +1,3 @@
-<footer class="container-fluid text-center">
-    <p>Footer Text</p>
+<footer class="container-fluid">
+    <p>Created by Clayton Phillips-Dorsett</p>
 </footer>
