--- a/pythonmodels/templates/pythonmodels/layout/header.html
+++ b/pythonmodels/templates/pythonmodels/layout/header.html
@@ -1,33 +1,32 @@
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand"><span class="glyphicon glyphicon-flash"></span></a>
-            <a class="navbar-brand" href="/">QuickModel</a>
-        </div>
-        <div class="collapse navbar-collapse" id="myNavbar">
+<nav class="navbar navbar-inverse header" role="navigation">
+    <div class="navbar-header">
+        <button class="navbar-toggle" type="button" data-target="#myNavbar" data-toggle="collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <ul class="nav navbar-nav navbar-left">
+            <a class="navbar-brand" href="/"><i class="fas fa-fighter-jet"></i> QuickModel</a>
+        </ul>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
 
-            <ul class="nav navbar-nav navbar-right">
-                {% if not user.is_authenticated %}
+        <ul class="nav navbar-nav navbar-right">
+            {% if not user.is_authenticated %}
 
-                    <li><a href="{% url 'pythonmodels:login' %}"><span class="glyphicon glyphicon-log-in"></span> Login</a>
-                    </li>
-                    <li><a href="{% url 'pythonmodels:guest' %}">Guest</a></li>
+                <li><a href="{% url 'pythonmodels:login' %}">Login <i class="fas fa-sign-in-alt"></i></a>
+                </li>
+                <li><a href="{% url 'pythonmodels:guest' %}">Guest</a></li>
 
-                {% else %}
+            {% else %}
 
-                    <li><a href="{% url 'pythonmodels:user_index' user.username %}">{{ user.username }}</a></li>
-                    <li><a href="{% url 'pythonmodels:logout' %}">Logout</a></li>
+                <li><a href="{% url 'pythonmodels:user_index' user.username %}">{{ user.username }}</a></li>
+                <li><a href="{% url 'pythonmodels:logout' %}">Logout <i class="fas fa-sign-out-alt"></i></a></li>
 
-                {% endif %}
+            {% endif %}
 
-            </ul>
+        </ul>
 
-        </div>
     </div>
 </nav>
 
