--- a/pythonmodels/templates/pythonmodels/layout/userLayout.html
+++ b/pythonmodels/templates/pythonmodels/layout/userLayout.html
@@ -40,19 +40,28 @@
     <div class="container-fluid">
         <div class="row content">
             <div class="col-sm-2 sidenav">
-                <ul class="nav nav-stacked">
-                    <li><a href="{% url 'pythonmodels:user_index' user.username %}">{{ user.username }} Home</a></li>
-                    <li><a href="{% url 'pythonmodels:dataset_upload' user.username %}">Upload Data</a></li>
-                    <li><a href="{% url 'pythonmodels:model_create' user.username 0 %}">Create Model</a></li>
-                </ul>
+                {# Fill with create model form #}
             </div>
 
             <div class="col-sm-8 text-left userBody">
-                <div class="container-fluid">
 
+                <div class="userNav">
+                    <ul class="nav nav-tabs userNav">
+                        <li><a href="{% url 'pythonmodels:user_index' user.username %}">{{ user.username }} Home
+                            <i class="fas fa-home"></i></a>
+                        </li>
+                        <li><a href="{% url 'pythonmodels:dataset_upload' user.username %}">Upload Data
+                            <i class="fas fa-database"></i></a>
+                        </li>
+                        <li><a href="{% url 'pythonmodels:model_create' user.username 0 %}">Create Model
+                            <i class="fas fa-chart-bar"></i></a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="container-fluid">
                     {% block userBody %}
                     {% endblock %}
-
                 </div>
             </div>
             <div class="col-sm-2 sidenav text-center">
