--- a/pythonmodels/templates/pythonmodels/layout/master.html
+++ b/pythonmodels/templates/pythonmodels/layout/master.html
@@ -30,6 +30,12 @@
 {# Jquery js #}
 <script src="{% static 'pythonmodels/js/jquery-3.2.1.min.js' %}"></script>
 
+{# Highcharts js #}
+<script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="//rawgithub.com/phpepe/highcharts-regression/master/highcharts-regression.js"></script>
+<script src="https://code.highcharts.com/modules/histogram-bellcurve.js"></script>
+<script src="https://code.highcharts.com/modules/heatmap.js"></script>
+
 {# Bootstrap js #}
 <script src="{% static 'pythonmodels/js/bootstrap.min.js' %}"></script>
 
