--- a/pythonmodels/static/pythonmodels/css/master.css
+++ b/pythonmodels/static/pythonmodels/css/master.css
@@ -1,30 +1,77 @@
-body {
-    background-color: #f1f1f1;
+@import url('https://fonts.googleapis.com/css?family=\
+Indie+Flower|Bree+Serif');
+
+/* Remove the navbar's default margin-bottom and rounded borders */
+.header {
+    margin-bottom: 0;
+    border-radius: 0;
+    font-family: "Bree Serif";
+    font-size: 20px;
+}
+
+.navbar-brand {
+    font-size: 24px;
 }
 
 .landing {
     display: flex;
-    height: 100vh;
     align-items: center;
     justify-content: center;
+    font-family: "Bree Serif";
 }
 
-/* Remove the navbar's default margin-bottom and rounded borders */
-.navbar {
-    margin-bottom: 0;
-    border-radius: 0;
+.landingContainer {
+    margin-top: 50px;
 }
 
+#landingTitle {
+    font-size: 40px;
+}
+
+#featureList {
+    font-size: 20px;
+}
+
+.landingBtns {
+    margin-top: 30px;
+    margin-bottom: 50px;
+}
+
+.loginRegistration {
+    height: 100vh;
+}
 
 /* Set black background color, white text and some padding */
 footer {
     background-color: #000000;
     color: white;
-    padding: 15px;
+    padding: 10px;
     bottom: 0;
     left: 0;
     width: 100%;
     min-height: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+#cpdLink {
+    font-size: 24px;
+    font-family: "Indie Flower";
+}
+
+#cpdLink a {
+    text-decoration: none;
+    color: inherit;
+}
+
+#footerImg {
+    display: flex;
+}
+
+#pythonImg a img, #djangoImg a img {
+    height: 40px;
+    margin-left: 20px;
 }
 
 #loginFlash {
