--- a/pythonmodels/static/pythonmodels/css/user.css
+++ b/pythonmodels/static/pythonmodels/css/user.css
@@ -5,7 +5,6 @@
 
 /* Set gray background color and 100% height */
 .sidenav {
-    padding-top: 20px;
     height: 100%;
 }
 
@@ -20,6 +19,10 @@
 
 .userNav > li > a {
     font-size: 20px;
+}
+
+.userNav > li.active > a, .userNav > li.active > a:hover {
+    border-bottom: orangered solid;
 }
 
 .userBody {
