--- a/pythonmodels/templates/pythonmodels/registration/register.html
+++ b/pythonmodels/templates/pythonmodels/registration/register.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <div class="landing">
+    <div class="landing loginRegistration">
 
         <div class="col-md-4">
             <h1>Register</h1>
