--- a/pythonmodels/templates/pythonmodels/user_content/userIndex.html
+++ b/pythonmodels/templates/pythonmodels/user_content/userIndex.html
@@ -15,7 +15,7 @@
     <div id="welcome">
         <h1>Welcome {{ user.username }}</h1>
 
-        Please view your datasets and models below:
+        Please view your available datasets below:
 
         <hr>
 
