Order testing on server

--- a/pythonmodels/static/pythonmodels/css/master.css
+++ b/pythonmodels/static/pythonmodels/css/master.css
@@ -20,20 +20,41 @@ Indie+Flower|Bree+Serif');
     font-family: "Bree Serif";
 }
 
+hr {
+    border-color: #9b9b9b;
+}
+
 .landingContainer {
     margin-top: 50px;
+    margin-bottom: 150px;
+    width: 100%
 }
 
 #landingTitle {
-    font-size: 40px;
+    font-size: 50px;
 }
 
 #featureList {
     font-size: 20px;
+    margin-bottom: 25px;
 }
 
-.landingBtns {
-    margin-top: 30px;
+.landingSpinner {
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 60px;
+    color: darkslategrey;
+}
+
+#plot1, #plot2 {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.bottomH1 {
+    margin-top: 25px;
     margin-bottom: 50px;
 }
 
