--- a/pythonmodels/static/pythonmodels/css/dataUpload.css
+++ b/pythonmodels/static/pythonmodels/css/dataUpload.css
@@ -1,24 +1,13 @@
 
+#uploadBodyDiv {
+    margin-top: 50px;
+}
+
 .dropzone {
     text-align: center;
     font-size: 18px;
 }
 
-.datasetDiv {
-    padding-left: 20px;
-    padding-bottom: 5px;
-    margin-bottom: 10px;
-    border-radius: 5px;
-}
-
-.newDataset {
-    background-color: rgba(1, 201, 0, 0.3);
-}
-
-.oldDataset {
-    background-color: rgba(0, 166, 201, 0.3);
-}
-
-.pubDataset {
-    background: rgba(0, 66, 201, 0.3);
+#deleteUpload {
+    visibility: hidden;
 }
