--- a/pythonmodels/templates/pythonmodels/landing_content/landing.html
+++ b/pythonmodels/templates/pythonmodels/landing_content/landing.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li>Upload your own dataset</li>
                     <li>Run classification and regression models</li>
-                    <li>Explore feature with interactive visualizations</li>
+                    <li>Explore features with interactive visualizations</li>
                 </ul>
             </div>
             <div class="container-fluid">
